// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should get the coin price with a coin and symbol and exchange arguments 1`] = `
{
  Symbol(Call Handler): {
    "data": {
      "coin": {
        "Symbol": "ETH",
      },
      "exchange": "Bitfinex",
      "symbol": "USD",
    },
    "handler": [Function],
    "types": [
      "GET_COIN_PRICE_ATTEMPT",
      "GET_COIN_PRICE_SUCCESS",
      "GET_COIN_PRICE_FAILURE",
    ],
  },
}
`;

exports[`actions should get the coin price with a coin and symbol arguments 1`] = `
{
  Symbol(Call Handler): {
    "data": {
      "coin": {
        "Symbol": "ETH",
      },
      "symbol": "USD",
    },
    "handler": [Function],
    "types": [
      "GET_COIN_PRICE_ATTEMPT",
      "GET_COIN_PRICE_SUCCESS",
      "GET_COIN_PRICE_FAILURE",
    ],
  },
}
`;

exports[`actions should get the coin price with a coin argument only 1`] = `
{
  Symbol(Call Handler): {
    "data": {
      "coin": {
        "Symbol": "ETH",
      },
    },
    "handler": [Function],
    "types": [
      "GET_COIN_PRICE_ATTEMPT",
      "GET_COIN_PRICE_SUCCESS",
      "GET_COIN_PRICE_FAILURE",
    ],
  },
}
`;

exports[`actions should get the coins list 1`] = `
{
  Symbol(Call Handler): {
    "handler": [Function],
    "types": [
      "GET_COINS_ATTEMPT",
      "GET_COINS_SUCCESS",
      "GET_COINS_FAILURE",
    ],
  },
}
`;
